--- a/_config.yml
+++ b/_config.yml
@@ -175,9 +175,9 @@ collections:
       layout: post
     output: true
     permalink: /news/:path/
-  projects:
+  tools:
     output: true
-    permalink: /projects/:path/
+    permalink: /tools/:path/
 
 announcements:
   enabled: true
@@ -381,12 +381,12 @@ enable_google_analytics: false # enables google analytics
 enable_cronitor_analytics: false # enables cronitor RUM analytics
 enable_google_verification: false # enables google site verification
 enable_bing_verification: false # enables bing site verification
-enable_masonry: true # enables automatic project cards arrangement
+enable_masonry: true # enables automatic tool cards arrangement
 enable_math: true # enables math typesetting (uses MathJax)
 enable_tooltips: false # enables automatic tooltip links generated for each section titles on pages and posts
 enable_darkmode: true # enables switching between light/dark modes
 enable_navbar_social: false # enables displaying social links in the navbar on the about page
-enable_project_categories: true # enables categorization of projects into multiple categories
+enable_tool_categories: true # enables categorization of tools into multiple categories
 enable_medium_zoom: true # enables image zoom feature (as on medium.com)
 enable_progressbar: true # enables a horizontal progress bar linked to the vertical scroll position
 
@@ -565,7 +565,7 @@ jsonresume:
   - work
   - education
   - publications
-  - projects
+  - tools
   - volunteer
   - awards
   - certificates
