--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Judy
-middle_name: 
+first_name: Qiao
+middle_name: (Judy)
 last_name: WANG
 email: 
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
