--- a/.prettierignore
+++ b/.prettierignore
@@ -6,3 +6,12 @@ assets/js/distillpub/template.v2.js
 assets/plotly/demo.html
 lighthouse_results/**
 _posts/2015-10-20-math.md
+
+.dockerignore
+.git-blame-ignore-revs
+.gitignore
+.prettierignore
+Dockerfile
+Gemfile
+LICENSE
+robots.txt
